# AUV-2025

./: .gitattributes  .gitignore  .gitmodules  .test_cert  Albert.txt  Allison.txt  Andreea.txt  Anthony.txt  Antoine.txt  Baneen.txt  Chantal.txt  Dockerfile  Eduard.txt  Gulce.txt  Henry.txt  Initialized_William.txt  Jenny.txt  Jonathan.txt  Justine.txt  LICENSE  Lauren.txt  Le.txt  Majd.txt  Malak.txt  Mira.txt  Murad.txt  Nathan.txt  Owen.txt  README.md  Raina.txt  Rudi.txt  Tarek.txt  ThrusterMicroseconds.h  YOLO_AUV_v2_1 (1).ipynb  compose-windows.bat  compose-windows.yml  compose.yml  debug_error  dvl_data_plotter.py  dvl_logger.py  (+9 more)
catkin_ws/src/arduino/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arduino/depth/: depth.h
catkin_ws/src/arduino/embedded/: CMakeLists.txt
catkin_ws/src/arduino/launch/: arduino.launch
catkin_ws/src/arduino/patch/: Arduino.cmake.fix  Arduino.cmake.patch  msg.h.patch  safe_patch.bash
catkin_ws/src/arduino/thrusters/: CMakeLists.txt  ros.h  thrusters.h  thrusters.ino
catkin_ws/src/auv_description/: CMakeLists.txt  package.xml
catkin_ws/src/auv_description/launch/: auv_description.launch
catkin_ws/src/auv_description/rviz/: auv.rviz
catkin_ws/src/auv_description/urdf/: auv.urdf
catkin_ws/src/auv_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/auv_msgs/action/: Direct.action  PursueTarget.action  Quaternion.action  QuaternionRotation.action  State.action  StateQuaternion.action  State_controller.action  Superimposer.action  Waypoint.action
catkin_ws/src/auv_msgs/blinky/: RGBArray.msg  TaskStatus.msg
catkin_ws/src/auv_msgs/msg/: DirectCommand.msg  DisplayScreen.msg  DvlData.msg  ImuData.msg  ObjectDetectionFrame.msg  ObjectDetectionFrameArray.msg  ObjectMap.msg  ObjectMapArray.msg  PingerBearing.msg  PingerTimeDifference.msg  StateCommand.msg  ThrusterCommand.msg  ThrusterCommands.msg  ThrusterForces.msg  ThrusterIntensities.msg  ThrusterMicroseconds.msg  UnityState.msg  VelocityReport.msg  VisionObject.msg
catkin_ws/src/auv_msgs/nucleo/: Debug_Signals.msg  Signals.msg
catkin_ws/src/blinky/: CMakeLists.txt  package.xml
catkin_ws/src/blinky/launch/: blinky.launch
catkin_ws/src/blinky/scripts/: BlinkyTape.py  blinky_node  blinky_server
catkin_ws/src/blinky/srv/: UpdateMotorBatteryLights.srv  WarningLights.srv
catkin_ws/src/blinky/test/: fake_update_planner_lights
catkin_ws/src/bringup/: CMakeLists.txt  package.xml
catkin_ws/src/bringup/bag/: temp.txt
catkin_ws/src/bringup/launch/: bringup.launch  only-rqt.launch  pooltest_heave.launch  pooltest_pitch.launch  pooltest_roll.launch  pooltest_surge.launch  pooltest_sway.launch  pooltest_yaw.launch  sim.launch  stub.launch  test-01-pitch.launch  test-01-roll.launch  test-01-surge.launch  test-01-sway.launch  test-01-yaw.launch  test-02-pitch.launch  test-02-surge.launch  test-02-sway.launch  test-03-dead-reckon-orientation.launch  test-03-heave.launch  test-03-pitch.launch  test-03-roll.launch  test-03-yaw.launch  test-04-heave.launch
catkin_ws/src/bringup/rqt-gui-config/: bringup.perspective
catkin_ws/src/bringup/src/: sensor_status.py  sensors_check.py
catkin_ws/src/calibration/: CMakeLists.txt  package.xml
catkin_ws/src/calibration/launch/: calibration.launch  heave_calibration.launch  logger.launch  nominal_orientation_calibration.launch  pitched_orientation_calibration.launch  rolled_orientation_calibration.launch
catkin_ws/src/calibration/src/: data_calibration.csv  heave-calibration.py  heave_calibration.py  logger.py  nominal_orientation_calibration.py  pitched_orientation_calibration.py  rolled_orientation_calibration.py  thruster_calibration.py
catkin_ws/src/controls/: CMakeLists.txt  Controls.excalidraw  README.md  package.xml  state_controller_action_client.py
catkin_ws/src/controls/config/: joy_teleop.yaml  joystick.config.yaml  pid_config.perspective  sim_gains.yaml  t100_characterization.csv
catkin_ws/src/controls/launch/: controls.launch  joystick.launch  only-gui.launch  pid-sim.launch  pid.launch  pid_config_gui.launch  pursueTarget.launch  router.launch  servers.launch  state_controller_action_server.launch  superimposer.launch  theta_setpoint_republish.launch  transform_broadcaster.launch  waypoint.launch
catkin_ws/src/controls/rqt-gui-config/: controls.perspective  pid_config.perspective
catkin_ws/src/controls/src/: MoveServers.py  controllers.py  dimensions.py  displace_server.py  init_servers.py  joy_heave.py  joystick.py  joystick_utils.py  pid.py  pursueTarget.py  quaternion_pid.py  router.py  state.py  state_action_client_example.py  state_controller_action_server.py  state_injestor.py  superimposer.py  superimposer.py.save  superimposer.py.save.1  theta_setpoint_republish.py  thrust_mapper.py  transform_broadcaster.py  waypoint.py
catkin_ws/src/controls/thrusters/: CMakeLists.txt  thrusters.h  thrusters.ino
catkin_ws/src/cv/: CMakeLists.txt  package.xml  readme.txt
catkin_ws/src/cv/config/: laneDetectorParams.cfg
catkin_ws/src/cv/launch/: camera_all.launch  camera_down.launch  camera_front_1.launch  camera_front_2.launch  knnDetector.launch
catkin_ws/src/cv/msg/: CvTarget.msg
catkin_ws/src/depth_sensor/: CMakeLists.txt  package.xml
catkin_ws/src/depth_sensor/embedded/: CMakeLists.txt
catkin_ws/src/depth_sensor/launch/: depth_sensor.launch
catkin_ws/src/dry-tests/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dry-tests/config/: drytest.yaml
catkin_ws/src/dry-tests/launch/: drytest.launch
catkin_ws/src/dry-tests/scripts/: camera_test.py  console_format.py  full_test.py  sensor_test.py  thruster_test.py  wait_for_message.py
catkin_ws/src/dvl/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/hydrophones/: CMakeLists.txt  bearing.py  package.xml  setup.py
catkin_ws/src/imu/: CMakeLists.txt  package.xml
catkin_ws/src/lane_marker/: CMakeLists.txt  package.xml
catkin_ws/src/nucleo/: CMakeLists.txt  Makefile  package.xml
catkin_ws/src/planner/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/propulsion/: CMakeLists.txt  README.md  package.xml  setup.py
(+1190 files in other folders)
