<?xml version="1.0"?>
<package format="2">
  <name>arduino</name>
  <version>0.0.0</version>
  <description>AUV arduino microcontroller package</description>

  <maintainer email="vasily.fedotov@mail.mcgill.ca">Vasily Fedotov</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <!--<build_depend>auv_msgs</build_depend>-->

  <exec_depend>std_msgs</exec_depend>
  <!--<run_depend>auv_msgs</run_depend>-->
  <exec_depend>rosserial_python</exec_depend>
</package>
