<?xml version="1.0"?>
<package format="2">
  <name>auv_msgs</name>
  <version>0.0.0</version>
  <description>AUV custom messages package</description>

  <maintainer email="vasily.fedotov@mail.mcgill.ca">Vasily Fedotov</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>-->
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
