<?xml version="1.0"?>
<package>
  <name>blinky</name>
  <version>0.0.0</version>
  <description>The blinky package</description>

  <maintainer email="bei.liu@mail.mcgill.ca">Bei Chen Liu</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
