<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>launch all the packages and bring the robot into operational state</description>
  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2020</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controls</build_depend>
  <build_depend>planner</build_depend>
  <build_depend>propulsion</build_depend>
  <build_depend>state_estimation</build_depend>

  <exec_depend>controls</exec_depend>
  <exec_depend>planner</exec_depend>
  <exec_depend>propulsion</exec_depend>
  <exec_depend>state_estimation</exec_depend>
</package>
