<?xml version="1.0"?>
<package format="2">
  <name>calibration</name>
  <version>0.1.0</version>
  <description>
      Package to calibrate the AUV's thrusters
  </description>

  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2020</url>
  <author email="vasily.fedotov@mail.mcgill.ca">Vasily Fedotov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>auv_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>auv_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>propulsion</exec_depend>
  <exec_depend>controls</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
