<?xml version="1.0"?>
<package format="2">
  <name>cv</name>
  <version>0.0.0</version>
  <description>The cv package</description>

  <maintainer email="gabriel.downs@mail.mcgill.ca">Gabriel Downs</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>angles</depend>
  <!--<depend>auv_msgs</depend>-->
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>darknet_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <!--<depend>pointgrey_camera_driver</depend> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>dynamic_reconfigure</depend>

</package>
