<?xml version="1.0"?>
<package format="2">
  <name>teledyne_navigator</name>
  <version>0.1.0</version>
  <description>
    Teledyne Navigator Doppler Velocity Log (DVL) ROS driver.
  </description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>

  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>genmsg</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-bitstring-pip</exec_depend>
  <exec_depend>python-serial</exec_depend>
</package>
