<?xml version="1.0"?>
<package format="2">
  <name>dvl</name>
  <version>0.1.0</version>
  <description>
    Teledyne Navigator Doppler Velocity Log (DVL) ROS driver.
  </description>
  <maintainer email="dev@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>auv_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-bitstring-pip</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
