<?xml version="1.0"?>
<package format="2">
	<name>hydrophones</name>
	<version>0.1.0</version>
	<description>provides bearing from hydrophone data</description>
	
	<maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
	<license>GPLv3</license>
	<url type="repository">https://github.com/mcgill-robotics/AUV-2023</url>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>

	<exec_depend>rospy</exec_depend>
</package>
