<?xml version="1.0"?>
<package format="2">
	<name>imu</name>
	<version>0.1.0</version>
	<description>The imu sensor driver</description>
	
	<maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
	<license>GPLv3</license>
	<url type="repository">https://github.com/mcgill-robotics/AUV-2024</url>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>auv_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>rosserial_arduino</build_depend>
	<build_depend>rosserial_client</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sbg_driver</build_depend>

	<exec_depend>auv_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>rosserial_arduino</exec_depend>
	<exec_depend>rosserial_client</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sbg_driver</exec_depend>
</package>
