<?xml version="1.0"?>
<package>
  <name>nucleo</name>
  <version>0.1.0</version>
  <description>
      This ROS package communicates with the STM32f3 Nucleo development board
      which samples the hydrophones audio signals.
  </description>
  <maintainer email="mr@anassinator.com">anassinator</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gcc-arm-none-eabi</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
