<?xml version="1.0"?>
<package format="2">
  <name>propulsion</name>
  <version>0.1.0</version>
  <description>
	  Package for moving the AUV. Designed to abstract away the mechanical 
	  implementation details of the propulsion mechanism.
  </description>
	  
  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2020</url>
  <author email="vasily.fedotov@mail.mcgill.ca">Vasily Fedotov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>auv_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>

  <exec_depend>auv_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>

</package>
